k8s/postgres-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres-deployment
  namespace: flowform-app
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
              - name: postgres-storage
                mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: local-pvc
