k8s/web-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-deployment
  namespace: flowform-app
  labels:
    app: flowform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flowform
  template:
    metadata:
      labels:
        app: flowform
    spec:
      containers:
        - name: web-container
          image: kushagr488/flowform-web
          ports:
            - containerPort: 3000
