k8s/api-service.yml
kind: Service
apiVersion: v1
metadata:
  name: api-service
  namespace: flowform-app
spec:
  selector:
    app: postgres-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
