k8s/web-service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-service
  namespace: flowform-app
spec:
  selector:
    app: flowform
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
